# snui

./: .gitignore  Cargo.toml  README.md
doc/: CONTROLLER.md  INTRODUCTION.md  MESSAGE.md  PRIMITIVE.md  WIDGET.md
doc/ressources/: color.webm
src/: .SCENE.md.kak.4RAtto  SCENE.md  canvas.rs  context.rs  controller.rs  core.rs  data.rs  font.rs  lib.rs  mail.rs  mod.rs  post.rs  scene.rs  snui.rs
src/cache/: font.rs  image.rs  mod.rs
src/wayland/: app.rs  backend.rs  buffer.rs  input.rs  mod.rs  shell.rs  utils.rs
src/widgets/: .active.rs  .inner.rs  .inner.rs~  action.rs  active.rs  button.rs  canvas.rs  core.rs  image.rs  inner.rs  label.rs  layout.rs  list.rs  listbox.rs  mod.rs  node.rs  revealer.rs  scroll.rs  singles.rs  slider.rs  text.rs  wbox.rs  window.rs
src/widgets/container/: .background.rs  .border.rs  background.rs  border.rs  box.rs  center.rs  center_box.rs  layout.rs  layout_box.rs  mod.rs  revealer.rs  wbox.rs  widget_layout.rs
src/widgets/extra/: mod.rs  revealer.rs  switch.rs  toggle.rs  window.rs
src/widgets/font/: mod.rs  text.rs
src/widgets/layout/: center.rs  dynamic.rs  flex.rs  mod.rs  simple.rs
src/widgets/primitives/: .shapes.rs.kak.Lgk0er  button.rs  mod.rs  shapes.rs
src/widgets/shapes/: mod.rs  rectangle.rs  style.rs
