[package]
name = "snui"
version = "0.1.0"
authors = ["Bryan Ndjeutcha <ndjeutcha@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.6.2"
tiny-skia = "0.6.1"
fontconfig = "0.2.1"
image = { version="0.23.14", features=["jpeg", "png"] }
wayland-client = { version="0.30.0-alpha2", optional= true }
wayland-protocols = { version="0.30.0-alpha1", optional= true, features=["unstable_protocols", "client"] }

[features]
default = ["wayland"]
wayland=["wayland-protocols", "wayland-client"]
