[package]
name = "snui"
version = "0.1.0"
authors = ["Bryan Ndjeutcha <ndjeutcha@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.6.2"
tiny-skia = "0.6.2"
fontconfig = "0.2.1"
image = { version="0.23.14", features=["jpeg", "png"] }
smithay-client-toolkit = { path="../client-toolkit/", optional= true }

[features]
default = ["wayland"]
wayland=["smithay-client-toolkit"]
